--- a/index.html
+++ b/index.html
@@ -33,10 +33,44 @@
                 <p class="intro-text">Find your New <br>
                 Modern Apartment</p>
             </div>
-
             <div class="intro-contacts">
                 <p><i class="fas fa-phone-alt"></i>(000)1234-567</p>
                 <p><i class="fal fa-map-marker"></i>Melbourn, Australia</p>
+            </div>
+        </section>
+        <section class="stats wrapper">
+            <div class="stats-text">
+                <h2>Our's Company <br> Statictiacs</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut porttitor leo a diam sollicitudin tempor id eu nisl. 
+                    Quis varius quam quisque id diam vel quam elementum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut porttitor leo a diam sollicitudin tempor id eu nisl.
+                        Quis varius quam quisque id diam vel quam elementum.</p>
+            </div>
+            <div class="stats-num">
+                <div class="stats-line">
+                    <div class="square">
+                        <span class="stats-square">7231</span>
+                        <span class="square-text">Apartments</span>
+                    </div>
+                    <div class="square">
+                        <span class="stats-square">7231</span>
+                        <span class="square-text">Apartments</span>
+                    </div>
+                </div>
+                <div class="stats-line">
+                    <div class="square">
+                        <span class="stats-square">7231</span>
+                        <span class="square-text">Apartments</span>
+                    </div>
+                    <div class="square">
+                        <span class="stats-square">7231</span>
+                        <span class="square-text">Apartments</span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
