--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,14 +41,16 @@
         <section class="stats wrapper">
             <div class="stats-text">
                 <h2>Our's Company <br> Statictiacs</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut porttitor leo a diam sollicitudin tempor id eu nisl. 
-                    Quis varius quam quisque id diam vel quam elementum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut porttitor leo a diam sollicitudin tempor id eu nisl.
-                        Quis varius quam quisque id diam vel quam elementum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Placeat, hic neque mollitia recusandae repellat aliquid ea nobis, 
+                    voluptatibus explicabo aut quos minima animi! 
+                    Explicabo asperiores quam autem omnis sunt itaque eveniet voluptates sit odit odio inventore,
+                    repellat id reprehenderit reiciendis vitae accusamus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quis quasi repudiandae eius facere totam incidunt enim maxime,
+                        esse molestiae exercitationem placeat numquam nemo ab voluptatem quisquam obcaecati
+                        sed eos vitae consequatur praesentium. 
+                        Autem consectetur nemo illo dignissimos dolorem pariatur veniam nisi expedita!</p>
             </div>
             <div class="stats-num">
                 <div class="stats-line">
